INTYG-6715: Fixa scrollbar på anteckningslistan

--- a/web/src/main/webapp/app/mixins/_ib-table.scss
+++ b/web/src/main/webapp/app/mixins/_ib-table.scss
@@ -1,7 +1,5 @@
 
 .table-actionbar {
-  display: flex;
-  flex-direction: row;
   padding-bottom: 10px;
 
   > .btn {
